--- a/style.css
+++ b/style.css
@@ -58,18 +58,18 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
 }
 
 main {
-  display: grid;
-  grid-template-columns: repeat(3, 300px);;
-/*  grid-template-rows: repeat(3, 100px);*/
-  grid-gap: 20px;
-  margin-top: 44px;
-  grid-auto-rows: 500px;
-  justify-items: center;
-  justify-content: space-evenly;
-  align-items: stretch;
-  align-content: center;
-  grid-auto-rows: 500px;
-  grid-auto-flow: row;
+    display: grid;
+    grid-template-columns: repeat(4, 300px);
+    grid-template-rows: repeat(3, 100px);
+    grid-gap: 20px;
+    margin-top: 44px;
+    grid-auto-rows: 500px;
+    justify-items: center;
+    justify-content: space-evenly;
+    align-items: stretch;
+    align-content: center;
+    grid-auto-rows: 500px;
+    grid-auto-flow: row;
 }
 
 /*https://css-tricks.com/almanac/properties/f/fill/
