--- a/style.css
+++ b/style.css
@@ -8,36 +8,47 @@
     font-family: Helvetica;
     font-size: 30px;
     font-weight: bold;
+    align-content: center;
 }
 
-h1, h2,
+h1, p, h2,
 h3 {
     font-family: Helvetica, Arial, sans-serif;
     color: #4A4A4A;
 }
 
+p {
+    font-size: 15px;
+    font-style: italic;
+}
+
+#logo{
+    padding-left: 20px;
+ }
 
 #shop,
 #tracker,
 #cart {
     float: right;
-
+    padding-right: 75px;
 }
 
-
-li {
-    float: left;
+#cart {
+    padding-right:125px;
 }
 
+/*https://www.w3schools.com/css/css_navbar.asp */
 li a{
+    float:left;
     display: block;
     color: #4A4A4A;
     /* top right bottom left*/
-    padding: 15px 75px 20px 20px;
+    padding: 15px 0px 0px 20px;
     text-decoration: none;
 }
 
-.carousel {
+.carousel,
+.buns {
     text-align: center;
 }
 
@@ -48,6 +59,7 @@ li a{
 /* https://www.w3schools.com/howto/howto_css_circles.asp
 https://www.w3schools.com/howto/howto_js_slideshow.asp
 */
+
 .dot {
     height: 10px;
     width: 10px;
@@ -57,34 +69,25 @@ https://www.w3schools.com/howto/howto_js_slideshow.asp
     margin: 0 10px;
 }
 
-main {
+.popular,
+.buns {
     display: grid;
-    grid-template-columns: repeat(4, 300px);
-    grid-gap: 20px;
-    margin-top: 44px;
+    grid-template-columns: auto auto auto;
+    grid-gap: 70px;
+    margin-top: 50px;
     justify-items: center;
     justify-content: space-evenly;
     align-items: stretch;
     align-content: center;
     grid-auto-flow: row;
+    padding-bottom: 0px;
+}
+
+#popularTitle{
+    padding-left: 60px;
 }
 
 
-/*https://css-tricks.com/almanac/properties/f/fill/
-.icon {
-  fill: black;
+footer {
+    padding: 30px;
 }
-
-#blueberry {
-    margin-left: 200px;
-}
-
-.popular {
-    margin-left: 115px;
-}
-
-
-.bun {
-    padding: 0px 50px 20px 50px;
-}
-*/
